# funding-arb-bot

./: .env.example  .gitignore  README.md  pyproject.toml
funding_arb_bot/: __init__.py
funding_arb_bot/cli/: main.py
funding_arb_bot/config/: __init__.py  loader.py  schema.py
funding_arb_bot/exchanges/: __init__.py  base.py  hyperliquid.py  lighter.py
funding_arb_bot/execution/: price_coordination.py  rebalance.py  reconciliation.py  risk.py  router.py  sizing.py
funding_arb_bot/infra/: killswitch.py  logging.py  persistence.py  pnl.py  reconnect.py
funding_arb_bot/strategy/: __init__.py  engine.py  portfolio.py  state.py
funding_arb_bot/tests/: conftest.py
funding_arb_bot/tests/unit/: test_strategy.py
