[project]
name = "funding-arb-bot"
version = "0.1.0"
description = "Funding Arbitrage Bot, Lighter and Hyperliquid"
authors = [
    {name = "Gajesh Naik",email = "26431906+Gajesh2007@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "hyperliquid-python-sdk (>=0.20.0,<0.21.0)",
    "lighter-sdk (>=0.1.4,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
